tests/error/error08.nex
class A
{
}

var a;
a = new A;

print a.data;
